# email-confirmation-service

./: .gitignore  README.md  setup-environment-template.sh
email-confirmation-service-common/: Cargo.toml
email-confirmation-service-common/src/: email_confirmation_request.rs  handler_params.rs  lib.rs  signature_request.rs
email-confirmation-service-rest-api/: Cargo.toml  README.md
email-confirmation-service-rest-api/cdk/: README.md  package-lock.json  package.json
email-confirmation-service-rest-api/cdk/lib/: cdk-stack.ts
email-confirmation-service-rest-api/src/: email_confirmation_request.rs  email_confirmation_request_service.rs  handler.rs  handler_params.rs  main.rs
handle-callback-endpoint/: Cargo.toml
handle-callback-endpoint/cdk/lib/: cdk-stack.ts
handle-callback-endpoint/src/: http_handler.rs  main.rs
handle-email-link-click-endpoint/: Cargo.toml  README.md
handle-email-link-click-endpoint/cdk/: package-lock.json
handle-email-link-click-endpoint/cdk/lib/: cdk-stack.ts
handle-email-link-click-endpoint/src/: email_confirmation_request.rs  handler_params.rs  http_handler.rs  main.rs
send-email-event-lambda/: Cargo.toml  README.md
send-email-event-lambda/cdk/: package.json
send-email-event-lambda/cdk/lib/: cdk-stack.ts
send-email-event-lambda/src/: email_confirmation_request.rs  event_handler.rs  main.rs
signature-service-lambda/: Cargo.toml  README.md
signature-service-lambda/cdk/: package-lock.json  package.json
signature-service-lambda/cdk/lib/: cdk-stack.ts
signature-service-lambda/src/: event_handler.rs  main.rs  signature_request.rs
trigger-callback-event-lambda/: Cargo.toml  README.md
trigger-callback-event-lambda/cdk/lib/: cdk-stack.ts
trigger-callback-event-lambda/fixtures/: example-dynamodb-event.json
trigger-callback-event-lambda/src/: event_handler.rs
