[package]
name = "email-confirmation-service-common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.137"
chrono = "0.4.39"
serde_dynamo = "4.2.14"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4"] }

