[package]
name = "handle-email-link-click-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.197"
serde_json = "1.0.138"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.12.1", features = ["v4"] }
urlencoding = "2.1"
email-confirmation-service-common = { path = "../email-confirmation-service-common" }