[package]
name = "send-email-event-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["dynamodb"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.137"
chrono = "0.4.39"
serde_dynamo = "4.2.14"
serde = { version = "1.0.217", features = ["derive"] }
aws-sdk-lambda = "1.71.0"
aws-smithy-types = "1.2.13"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ses = "1.64.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
email-confirmation-service-common = { path = "../email-confirmation-service-common" }
