[package]
name = "signature-service-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
