[package]
name = "trigger-callback-event-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["dynamodb"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.39"
serde_json = "1.0.137"
